@@ -322,12 +322,13 @@ std::string interpolate_variables_into_string(const std::string &str, const vari
 }
 
 // modify a number by string representing integer difference, or optionally %
-int apply_modifier( const int number, const std::string &amount, const int minimum ) {
+int apply_modifier( const int number, const std::string &amount, const int minimum, const int times ) {
 	// wassert( amount.empty() == false );
 	int value = atoi(amount.c_str());
 	if(amount[amount.size()-1] == '%') {
 		value = div100rounded(number * value);
 	}
+	value *= times;
 	value += number;
 	if (( minimum > 0 ) && ( value < minimum ))
 	    value = minimum;
